# kgs-query-service

./: .env  Cargo.toml  configuration.yaml
.github/workflows/: ci.yml
migrations/: 20220324192435_CREATE_TABLE_global_settings.sql
scripts/: init_db.sh
src/: lib.rs  main.rs  startup.rs
src/routes/: global_settings.rs  mod.rs
tests/: global_settings.rs  health_check.rs
