[package]
name = "kgs-query-service"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "kgs-query-service"


[dependencies]
actix-web = "=4.0.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
config = { version = "0.11", default-features = false, features = ["yaml"] }
uuid = { version = "0.8.1", features = ["v4", "serde"] }
bigdecimal = { version = "0.2", features = ["serde"] }

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "bigdecimal"
]

[dev-dependencies]
serde_json = { version = "1.0.79", features = ["preserve_order"] }
reqwest = "0.11"
fluent-asserter = "0.1.6"